////////////////////////////////////////////////////////////////////////////////
// $ brew install protobuf
// $ brew install grpc
// $ go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
//
// in grpcjson directory
// protoc keyvalue/*.proto \
//     --go_out=. --go_opt=paths=source_relative \
//     --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//     --proto_path=.
////////////////////////////////////////////////////////////////////////////////
syntax = "proto3";

option go_package = "./keyvalue";

package keyvalue;

service KeyValue {
  rpc Set(SetKeyValueRequest) returns (KeyValueResponse) {}
  rpc Get(GetKeyValueRequest) returns (KeyValueResponse) {}
}

message SetKeyValueRequest {
  string key = 1;
  string value = 2;
}

message GetKeyValueRequest {
  string key = 1;
}

message KeyValueResponse {
  string success = 1;
  string value = 2;
}